--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,28 +1,10 @@
-.App {
-  text-align: center;
+body, html, #root {
+  height: 100%;
+  background: #eee;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.jumbotron {
+  background-color: #eee;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.lead-body {
+  padding-top: 50px;
 }
